--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "1.3.0",
+    "gray-matter": "^4.0.3",
     "next": "15.3.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "3",
     "@tailwindcss/postcss": "4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.0.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.27.0",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "4.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.1",
     "typescript": "5.8.3",
     "wrangler": "4.21.x"
   },
