--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
     "wrangler": "4.21.x"
   },
   "scripts": {
+    "generate:posts": "node scripts/build-posts.mjs",
+    "prebuild": "node scripts/build-posts.mjs",
     "build": "next build",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
-    "check": "npm run build && tsc",
-    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
-    "dev": "next dev",
+    "dev": "node scripts/build-posts.mjs && next dev",
+    "deploy": "node scripts/build-posts.mjs && opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "preview": "node scripts/build-posts.mjs && opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "start": "next start",
     "lint": "next lint",
-    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-    "start": "next start"
+    "check": "npm run build && tsc",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   }
 }
