--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@opennextjs/cloudflare": "1.3.0",
     "gray-matter": "^4.0.3",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remark": "^15.0.1",
